--- a/your-code/bonus.ipynb
+++ b/your-code/bonus.ipynb
@@ -19,13 +19,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Import libraries\n",
     "\n",
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "import scipy.stats as stats"
    ]
   },
   {
@@ -39,15 +40,193 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>#</th>\n",
+       "      <th>Name</th>\n",
+       "      <th>Type 1</th>\n",
+       "      <th>Type 2</th>\n",
+       "      <th>Total</th>\n",
+       "      <th>HP</th>\n",
+       "      <th>Attack</th>\n",
+       "      <th>Defense</th>\n",
+       "      <th>Sp. Atk</th>\n",
+       "      <th>Sp. Def</th>\n",
+       "      <th>Speed</th>\n",
+       "      <th>Generation</th>\n",
+       "      <th>Legendary</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>Bulbasaur</td>\n",
+       "      <td>Grass</td>\n",
+       "      <td>Poison</td>\n",
+       "      <td>318</td>\n",
+       "      <td>45</td>\n",
+       "      <td>49</td>\n",
+       "      <td>49</td>\n",
+       "      <td>65</td>\n",
+       "      <td>65</td>\n",
+       "      <td>45</td>\n",
+       "      <td>1</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>Ivysaur</td>\n",
+       "      <td>Grass</td>\n",
+       "      <td>Poison</td>\n",
+       "      <td>405</td>\n",
+       "      <td>60</td>\n",
+       "      <td>62</td>\n",
+       "      <td>63</td>\n",
+       "      <td>80</td>\n",
+       "      <td>80</td>\n",
+       "      <td>60</td>\n",
+       "      <td>1</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>Venusaur</td>\n",
+       "      <td>Grass</td>\n",
+       "      <td>Poison</td>\n",
+       "      <td>525</td>\n",
+       "      <td>80</td>\n",
+       "      <td>82</td>\n",
+       "      <td>83</td>\n",
+       "      <td>100</td>\n",
+       "      <td>100</td>\n",
+       "      <td>80</td>\n",
+       "      <td>1</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3</td>\n",
+       "      <td>VenusaurMega Venusaur</td>\n",
+       "      <td>Grass</td>\n",
+       "      <td>Poison</td>\n",
+       "      <td>625</td>\n",
+       "      <td>80</td>\n",
+       "      <td>100</td>\n",
+       "      <td>123</td>\n",
+       "      <td>122</td>\n",
+       "      <td>120</td>\n",
+       "      <td>80</td>\n",
+       "      <td>1</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4</td>\n",
+       "      <td>Charmander</td>\n",
+       "      <td>Fire</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>309</td>\n",
+       "      <td>39</td>\n",
+       "      <td>52</td>\n",
+       "      <td>43</td>\n",
+       "      <td>60</td>\n",
+       "      <td>50</td>\n",
+       "      <td>65</td>\n",
+       "      <td>1</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   #                   Name Type 1  Type 2  Total  HP  Attack  Defense  \\\n",
+       "0  1              Bulbasaur  Grass  Poison    318  45      49       49   \n",
+       "1  2                Ivysaur  Grass  Poison    405  60      62       63   \n",
+       "2  3               Venusaur  Grass  Poison    525  80      82       83   \n",
+       "3  3  VenusaurMega Venusaur  Grass  Poison    625  80     100      123   \n",
+       "4  4             Charmander   Fire     NaN    309  39      52       43   \n",
+       "\n",
+       "   Sp. Atk  Sp. Def  Speed  Generation  Legendary  \n",
+       "0       65       65     45           1      False  \n",
+       "1       80       80     60           1      False  \n",
+       "2      100      100     80           1      False  \n",
+       "3      122      120     80           1      False  \n",
+       "4       60       50     65           1      False  "
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Import dataset\n",
     "\n",
-    "pokemon = pd.read_csv('../../lab-df-calculation-and-transformation/your-code/Pokemon.csv')\n",
+    "pokemon = pd.read_csv('../data/Pokemon.csv')\n",
     "\n",
     "pokemon.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 800 entries, 0 to 799\n",
+      "Data columns (total 13 columns):\n",
+      " #   Column      Non-Null Count  Dtype \n",
+      "---  ------      --------------  ----- \n",
+      " 0   #           800 non-null    int64 \n",
+      " 1   Name        800 non-null    object\n",
+      " 2   Type 1      800 non-null    object\n",
+      " 3   Type 2      414 non-null    object\n",
+      " 4   Total       800 non-null    int64 \n",
+      " 5   HP          800 non-null    int64 \n",
+      " 6   Attack      800 non-null    int64 \n",
+      " 7   Defense     800 non-null    int64 \n",
+      " 8   Sp. Atk     800 non-null    int64 \n",
+      " 9   Sp. Def     800 non-null    int64 \n",
+      " 10  Speed       800 non-null    int64 \n",
+      " 11  Generation  800 non-null    int64 \n",
+      " 12  Legendary   800 non-null    bool  \n",
+      "dtypes: bool(1), int64(9), object(3)\n",
+      "memory usage: 75.9+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "pokemon.info()"
    ]
   },
   {
@@ -63,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,7 +258,9 @@
     "        dict: a dictionary of t-test scores for each feature where the feature name is the key and the p-value is the value\n",
     "    \"\"\"\n",
     "    results = {}\n",
-    "\n",
+    "    for feature in features:\n",
+    "        t_stat, p_value = stats.ttest_ind(s1[feature], s2[feature], equal_var=False)\n",
+    "        results[feature] =  p_value\n",
     "    # Your code here\n",
     "    \n",
     "    return results"
@@ -106,11 +287,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'HP': 1.0026911708035284e-13,\n",
+       " 'Attack': 2.520372449236646e-16,\n",
+       " 'Defense': 4.8269984949193316e-11,\n",
+       " 'Sp. Atk': 1.5514614112239812e-21,\n",
+       " 'Sp. Def': 2.2949327864052826e-15,\n",
+       " 'Speed': 1.049016311882451e-18,\n",
+       " 'Total': 9.357954335957446e-47}"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "legendary_pokemon = pokemon[pokemon['Legendary'] == True]\n",
+    "non_legendary_pokemon = pokemon[pokemon['Legendary'] == False]\n",
+    "\n",
+    "legendary_vs_nonlegendary_results= t_test_features(legendary_pokemon, non_legendary_pokemon)\n",
+    "legendary_vs_nonlegendary_results"
    ]
   },
   {
@@ -126,7 +329,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your comment here"
+    "# Your comment here\n",
+    "# Legendary Pokémon have significantly different stats vs. non-Legendary Pokémon across all tested features, as indicated by the extremely low p-values."
    ]
   },
   {
@@ -138,11 +342,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'HP': 0.14551697834219623,\n",
+       " 'Attack': 0.24721958967217725,\n",
+       " 'Defense': 0.5677711011725426,\n",
+       " 'Sp. Atk': 0.12332165977104388,\n",
+       " 'Sp. Def': 0.18829872292645752,\n",
+       " 'Speed': 0.00239265937312135,\n",
+       " 'Total': 0.5631377907941676}"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "gen1_pokemon = pokemon[pokemon['Generation'] == 1]\n",
+    "gen2_pokemon = pokemon[pokemon['Generation'] == 2]\n",
+    "\n",
+    "gen1_vs_gen2_results= t_test_features(gen1_pokemon, gen2_pokemon)\n",
+    "gen1_vs_gen2_results"
    ]
   },
   {
@@ -158,7 +384,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your comment here"
+    "# Your comment here\n",
+    "#There is no statistically significant difference in most stats between Generation 1 and Generation 2 Pokémon, except for Speed, \n",
+    "# which shows a significant difference."
    ]
   },
   {
@@ -170,11 +398,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'HP': 0.11314389855379413,\n",
+       " 'Attack': 0.00014932578145948305,\n",
+       " 'Defense': 2.7978540411514693e-08,\n",
+       " 'Sp. Atk': 0.00013876216585667907,\n",
+       " 'Sp. Def': 0.00010730610934512779,\n",
+       " 'Speed': 0.02421703281819093,\n",
+       " 'Total': 1.1157056505229961e-07}"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "single_type_pokemon = pokemon[pokemon['Type 2'].isna()]\n",
+    "dual_type_pokemon = pokemon[pokemon['Type 2'].notna()]\n",
+    "\n",
+    "single_vs_dual_results = t_test_features(single_type_pokemon, dual_type_pokemon)\n",
+    "single_vs_dual_results"
    ]
   },
   {
@@ -190,7 +440,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your comment here"
+    "# Your comment here\n",
+    "# Single-type and dual-type Pokémon have significantly different stats in Attack, Defense, Sp. Atk, Sp. Def, Speed, and Total, based on very low p-values. \n",
+    "# HP does not show a significant difference between them."
    ]
   },
   {
@@ -204,11 +456,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Attack vs Defense p-value: 1.7140303479358558e-05\n",
+      "Sp. Atk vs Sp. Def p-value: 0.3933685997548122\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "# We are comparing the same Pokemon population, we need a paired t-test.\n",
+    "\n",
+    "attack_vs_defense_p =stats.ttest_rel(pokemon['Attack'], pokemon['Defense']).pvalue\n",
+    "spatk_vs_spdef_p = stats.ttest_rel(pokemon['Sp. Atk'], pokemon['Sp. Def']).pvalue\n",
+    "\n",
+    "print(f\"Attack vs Defense p-value: {attack_vs_defense_p}\")\n",
+    "print(f\"Sp. Atk vs Sp. Def p-value: {spatk_vs_spdef_p}\")"
    ]
   },
   {
@@ -224,13 +492,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your comment here"
+    "# Your comment here\n",
+    "# The p-value for Attack vs Defense is very low (1.71e-05), indicating a significant difference between these two stats.\n",
+    "# However, the p-value for Sp. Atk vs Sp. Def (0.393) is much higher, meaning there is no statistically significant difference between them."
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -244,7 +514,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
