--- a/your-code/main.ipynb
+++ b/your-code/main.ipynb
@@ -22,7 +22,7 @@
     "from scipy.stats import trim_mean, mode, skew, gaussian_kde, pearsonr, spearmanr, beta\n",
     "from statsmodels.stats.weightstats import ztest as ztest\n",
     "\n",
-    "from scipy.stats import ttest_ind, norm, t\n",
+    "from scipy.stats import ttest_ind, norm, t \n",
     "from scipy.stats import f_oneway\n",
     "from scipy.stats import sem"
    ]
@@ -38,12 +38,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Run this code:\n",
-    "salaries = pd.read_csv('../Current_Employee_Names__Salaries__and_Position_Titles.csv')"
+    "salaries = pd.read_csv('../data/Current_Employee_Names__Salaries__and_Position_Titles.csv')"
    ]
   },
   {
@@ -55,11 +55,267 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Name</th>\n",
+       "      <th>Job Titles</th>\n",
+       "      <th>Department</th>\n",
+       "      <th>Full or Part-Time</th>\n",
+       "      <th>Salary or Hourly</th>\n",
+       "      <th>Typical Hours</th>\n",
+       "      <th>Annual Salary</th>\n",
+       "      <th>Hourly Rate</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>AARON,  JEFFERY M</td>\n",
+       "      <td>SERGEANT</td>\n",
+       "      <td>POLICE</td>\n",
+       "      <td>F</td>\n",
+       "      <td>Salary</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>101442.0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>AARON,  KARINA</td>\n",
+       "      <td>POLICE OFFICER (ASSIGNED AS DETECTIVE)</td>\n",
+       "      <td>POLICE</td>\n",
+       "      <td>F</td>\n",
+       "      <td>Salary</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>94122.0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>AARON,  KIMBERLEI R</td>\n",
+       "      <td>CHIEF CONTRACT EXPEDITER</td>\n",
+       "      <td>GENERAL SERVICES</td>\n",
+       "      <td>F</td>\n",
+       "      <td>Salary</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>101592.0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>ABAD JR,  VICENTE M</td>\n",
+       "      <td>CIVIL ENGINEER IV</td>\n",
+       "      <td>WATER MGMNT</td>\n",
+       "      <td>F</td>\n",
+       "      <td>Salary</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>110064.0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>ABASCAL,  REECE E</td>\n",
+       "      <td>TRAFFIC CONTROL AIDE-HOURLY</td>\n",
+       "      <td>OEMC</td>\n",
+       "      <td>P</td>\n",
+       "      <td>Hourly</td>\n",
+       "      <td>20.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>19.86</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                  Name                              Job Titles  \\\n",
+       "0    AARON,  JEFFERY M                                SERGEANT   \n",
+       "1      AARON,  KARINA   POLICE OFFICER (ASSIGNED AS DETECTIVE)   \n",
+       "2  AARON,  KIMBERLEI R                CHIEF CONTRACT EXPEDITER   \n",
+       "3  ABAD JR,  VICENTE M                       CIVIL ENGINEER IV   \n",
+       "4    ABASCAL,  REECE E             TRAFFIC CONTROL AIDE-HOURLY   \n",
+       "\n",
+       "         Department Full or Part-Time Salary or Hourly  Typical Hours  \\\n",
+       "0            POLICE                 F           Salary            NaN   \n",
+       "1            POLICE                 F           Salary            NaN   \n",
+       "2  GENERAL SERVICES                 F           Salary            NaN   \n",
+       "3       WATER MGMNT                 F           Salary            NaN   \n",
+       "4              OEMC                 P           Hourly           20.0   \n",
+       "\n",
+       "   Annual Salary  Hourly Rate  \n",
+       "0       101442.0          NaN  \n",
+       "1        94122.0          NaN  \n",
+       "2       101592.0          NaN  \n",
+       "3       110064.0          NaN  \n",
+       "4            NaN        19.86  "
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here"
+    "# Your code here\n",
+    "salaries.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 33183 entries, 0 to 33182\n",
+      "Data columns (total 8 columns):\n",
+      " #   Column             Non-Null Count  Dtype  \n",
+      "---  ------             --------------  -----  \n",
+      " 0   Name               33183 non-null  object \n",
+      " 1   Job Titles         33183 non-null  object \n",
+      " 2   Department         33183 non-null  object \n",
+      " 3   Full or Part-Time  33183 non-null  object \n",
+      " 4   Salary or Hourly   33183 non-null  object \n",
+      " 5   Typical Hours      8022 non-null   float64\n",
+      " 6   Annual Salary      25161 non-null  float64\n",
+      " 7   Hourly Rate        8022 non-null   float64\n",
+      "dtypes: float64(3), object(5)\n",
+      "memory usage: 2.0+ MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "salaries.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Typical Hours</th>\n",
+       "      <th>Annual Salary</th>\n",
+       "      <th>Hourly Rate</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>8022.000000</td>\n",
+       "      <td>25161.000000</td>\n",
+       "      <td>8022.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>34.507604</td>\n",
+       "      <td>86786.999790</td>\n",
+       "      <td>32.788558</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>9.252077</td>\n",
+       "      <td>21041.354602</td>\n",
+       "      <td>12.112573</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>10.000000</td>\n",
+       "      <td>7200.000000</td>\n",
+       "      <td>2.650000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>20.000000</td>\n",
+       "      <td>76266.000000</td>\n",
+       "      <td>21.200000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>40.000000</td>\n",
+       "      <td>90024.000000</td>\n",
+       "      <td>35.600000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>40.000000</td>\n",
+       "      <td>96060.000000</td>\n",
+       "      <td>40.200000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>40.000000</td>\n",
+       "      <td>300000.000000</td>\n",
+       "      <td>109.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       Typical Hours  Annual Salary  Hourly Rate\n",
+       "count    8022.000000   25161.000000  8022.000000\n",
+       "mean       34.507604   86786.999790    32.788558\n",
+       "std         9.252077   21041.354602    12.112573\n",
+       "min        10.000000    7200.000000     2.650000\n",
+       "25%        20.000000   76266.000000    21.200000\n",
+       "50%        40.000000   90024.000000    35.600000\n",
+       "75%        40.000000   96060.000000    40.200000\n",
+       "max        40.000000  300000.000000   109.000000"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "salaries.describe()"
    ]
   },
   {
@@ -75,9 +331,39 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "T-statistic: 20.6198057854942\n",
+      "P-value: 4.3230240486229894e-92\n",
+      "Conclusion: We reject the null hypothesis. The hourly wage is significantly different from $30/hr.\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here"
+    "# Your code here\n",
+    "from scipy.stats import ttest_1samp\n",
+    "# H₀ (Null Hypothesis): The mean hourly wage is equal to $30/hr.\n",
+    "# H₁ (Alternate Hypothesis): The mean hourly wage is not equal to $30/hr.\n",
+    "\n",
+    "#Converting the annual salary to hourly wages for hourly employees\n",
+    "hourly_salaries = salaries[salaries['Salary or Hourly'] == 'Hourly']\n",
+    "hourly_wages = hourly_salaries['Hourly Rate']\n",
+    "\n",
+    "#One-sample test\n",
+    "t_stat, p_value = ttest_1samp(hourly_wages, 30)\n",
+    "\n",
+    "# Test results\n",
+    "print(f\"T-statistic: {t_stat}\")\n",
+    "print(f\"P-value: {p_value}\")\n",
+    "\n",
+    "# Conclusion\n",
+    "if p_value < 0.05:\n",
+    "    print(\"Conclusion: We reject the null hypothesis. The hourly wage is significantly different from $30/hr.\")\n",
+    "else:\n",
+    "    print(\"Conclusion: We fail to reject the null hypothesis. The hourly wage is not significantly different from $30/hr.\")"
    ]
   },
   {
@@ -101,11 +387,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mean of hourly wages: 32.78855771628024\n",
+      "Standard Error: 0.1352368565101596\n",
+      "Sample Size: 8022\n",
+      "95% Confidence Interval: (32.52345834488425, 33.05365708767623)\n",
+      "Conclusion: We are 95% confident that the true mean hourly wage falls within this range.\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here"
+    "# Your code here\n",
+    "# Mean of hourly wages\n",
+    "mean_wage= hourly_wages.mean()\n",
+    "print(f'Mean of hourly wages: {mean_wage}')\n",
+    "\n",
+    "#Standard error of hourly wages\n",
+    "standard_error = sem(hourly_wages)\n",
+    "print(f'Standard Error: {standard_error}')\n",
+    "\n",
+    "#Sample size\n",
+    "n = len(hourly_wages)\n",
+    "print(f'Sample Size: {n}')\n",
+    "#Degrees of freedom\n",
+    "df = n-1\n",
+    "\n",
+    "#Confidence interval of 95% confidence level\n",
+    "confidence_interval = t.interval(0.95, df, loc=mean_wage, scale= standard_error)\n",
+    "\n",
+    "print(f\"95% Confidence Interval: {confidence_interval}\")\n",
+    "print(\"Conclusion: We are 95% confident that the true mean hourly wage falls within this range.\")\n"
    ]
   },
   {
@@ -123,17 +440,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Total number of employees: 33183\n",
+      "Total number of hourly workers: 8022\n",
+      "Proportion of hourly workers: 24.18%\n",
+      "Z-statistic: -3.5099964213703005\n",
+      "P-value: 0.0004481127249057967\n",
+      "Conclusion: We reject the null hypothesis. The proportion of hourly workers is significantly different from 25%.\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here"
+    "# Your code here\n",
+    "from statsmodels.stats.proportion import proportions_ztest\n",
+    "# H₀ (Null Hypothesis): The proportion of hourly workers is equal to 25%.\n",
+    "# H₁ (Alternate Hypothesis): The proportion of hourly workers is not equal to 25%\n",
+    "\n",
+    "# Number of hourly workers\n",
+    "hourly_workers = salaries[salaries[\"Salary or Hourly\"] == \"Hourly\"]\n",
+    "hourly_count= len(hourly_workers)\n",
+    "\n",
+    "#Total workers\n",
+    "total_count= len(salaries)\n",
+    "\n",
+    "print(f\"Total number of employees: {total_count}\")\n",
+    "print(f\"Total number of hourly workers: {hourly_count}\")\n",
+    "print(f\"Proportion of hourly workers: {hourly_count / total_count:.2%}\")\n",
+    "\n",
+    "# Proportion z-test\n",
+    "stat, p_value = proportions_ztest(hourly_count, total_count, 0.25)\n",
+    "\n",
+    "#Test result\n",
+    "print(f\"Z-statistic: {stat}\")\n",
+    "print(f\"P-value: {p_value}\")\n",
+    "\n",
+    "# Conclusion\n",
+    "if p_value < 0.05:\n",
+    "    print(\"Conclusion: We reject the null hypothesis. The proportion of hourly workers is significantly different from 25%.\")\n",
+    "else:\n",
+    "    print(\"Conclusion: We fail to reject the null hypothesis. The proportion of hourly workers is not significantly different from 25%.\")\n",
+    "\n"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -147,7 +505,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
